Fix grid filling height on small screens

--- a/public/main.css
+++ b/public/main.css
@@ -240,6 +240,8 @@ a {
   .paper {
     padding-top: 120px;
     height: 100%;
+    min-height: 100vh;
+    box-shadow: none;
   }
 }
 
